--- a/web_flask/static/styles/8-places.css
+++ b/web_flask/static/styles/8-places.css
@@ -1,127 +1,90 @@
+.places h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 30px;
+    max-width: 300px;
+    
+}
+
 .places {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin: 45px auto;
-	text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+
 }
 
-article {
-	display: flex;
-	width: 390px;
-	flex: none;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-content: flex-start;
+.places article {
+    width: 390px;
+    padding: 20px;
+    margin: 20px;
+    border: solid 1px#FF5A5F;
+    border-radius: 4px;
 
-	padding-top: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 20px;
-	margin: 20px;
-
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
 }
 
-.headline {
-	display: flex;
-	flex-direction: row;
-	position: relative;
-
-	height: 80px;	
-	width: 100%;
+.places h1 {
+    font-size: 30px;
+    padding-left: 15px;
+    margin-bottom: 0;
+    margin-left: 15%;
+    flex: 0 0 100%
 }
 
-.price_by_night {
-	display: flex;
-	justify-content: center;
-	align-self: flex-end;
-
-	position: absolute;
-	right: 0;
-
-	line-height: 60px;
-	color: #FF5A5F;
-	font-size: 30px;
-	padding: 5px;
-	border: 4px solid #FF5A5F;
-	border-radius: 100%;
-	float: right;
-	min-width: 60px;
-	height: 60px;
+.price_by_night{
+    color: #FF5A5F;
+    border: solid 4px #FF5A5F;
+    min-width: 60px;
+    line-height: 60px;
+    font-size: 30px;
+    text-align: center;
+    border-radius: 50%;
+    max-height: 60px;
 }
 
-.information {
-	display: block;
-	height: 80px;
-	width: 100%;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
 
-	padding-top: 5px;
-	padding-bottom: 12px;
-	margin-top: 10px;
-	margin-bottom: 20px;
+
+.box_top{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 
-.max_guest, .number_rooms, .number_bathrooms {
-	display: inline-block;
-	width: 100px;
-	text-align: center;
-	margin: 0px auto;
+
+.information{
+    height: 80px;
+    border-top: solid 1px #DDDDDD;
+    border-bottom: solid 1px #DDDDDD;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
-.user {
-	margin-top: 5px;
-	margin-bottom: 5px;	
+.information div{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+    height: 64px;
 }
 
-.description {
-	text-align: left;
+.max_guest{
+    height: 105px;
+    background: url('../images/icon_group.png') no-repeat top;
+    text-align: left;
 }
 
-h1 {
-	display: block;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
+.number_rooms {
+    height: 105px;
+    background: url('../images/icon_bed.png') no-repeat top;
 }
 
-article h2 {
-	font-size: 30px;
-	margin: 10px auto;
-	padding: 0px;
-	text-align: left;
+.number_bathrooms{
+    height: 105px;
+    background: url('../images/icon_bath.png') no-repeat top;
 }
 
-.guest_icon {
-	display: inline-block;
-	background-image: url("../images/icon_group.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 50px;
-	height: 50px;
+.user{
+    margin-top: 15px;
 }
 
-.bed_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
-}
-
-.bath_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
-}
